# SBOM-optimization-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
ai_engine/: main.py  requirements.txt
ai_engine/config/: llm.py
ai_engine/graph_state/: __init__.py  initializer.py
ai_engine/nodes/: fix_node.py  sbom_node.py  summary_node.py  validation_node.py
ai_engine/parsers/: __init__.py  semgrep_parser.py  snyk_parser.py  sonarqube_parser.py  syft_parser.py  trivy_parser.py
ai_engine/schemas/: pipeline_state.py  sbom.py  vulnerability.py
ai_engine/schemas/scanner_outputs/: semgrep.py  snyk.py  sonarqube.py  syft.py  trivy.py
ai_engine/tests/: __init__.py  test_graph_smoke.py  test_syft_schema.py  test_validation_node.py
ai_engine/workflow/: graph.py
research/: models.py
research-validation-pipeline/: README.md
research-validation-pipeline/.github/workflows/: pipeline.yml
research-validation-pipeline/ai_engine/: main.py
research-validation-pipeline/ai_engine/nodes/: validation_node.py
research-validation-pipeline/ai_engine/schemas/: pipeline_state.py
research-validation-pipeline/ai_engine/workflow/: graph.py
research-validation-pipeline/research/: models.py
research-validation-pipeline/research/config/: settings.py
research/config/: settings.py
research/evaluation/: metrics.py  run_experiment.py
research/llm_validation/: validator.py
research/pipeline/: decision_engine.py  run_validation.py
research/rule_engine/: rules.py
research/static_analysis/: parser.py  signals.py
research/utils/: logger.py
(+9 files in other folders)
